# LLM_Inference_Optimization

./: Makefile  README.md  pyproject.toml  requirements-jax.txt  requirements.txt  setup.py
benchmarks/: llama_integration_benchmark.py  profile_fused_gqa.py  run_benchmarks.py
csrc/kernels/: gqa_decode.cu  kv_evict_quant.cu  sparse_attention.cu
csrc/pybind/: bindings.cpp
jax_ref/: __init__.py  sparse_attention_pallas.py  test_pallas.py  test_results.txt
profiles/: README.md  fsdp_baseline.nsys-rep
results/llama_run_20260625_182912/: results.csv  results.json
results/llama_run_20260625_182913/: results.csv  results.json
results/llama_run_20260625_182920/: results.csv  results.json
results/llama_run_20260626_203030/: results.csv  results.json
results/llama_run_20260626_235255/: results.csv  results.json
results/llama_run_20260628_183937/: results.csv  results.json
results/llama_run_20260628_233732/: layer_sweep.json  results.csv  results.json  v3_layer_validation.json
results/run1/: benchmark_20260624_142029.csv  benchmark_20260624_142029.json  benchmark_20260624_142310.csv  benchmark_20260624_142310.json
results/run2/: benchmark_20260624_164915.csv  benchmark_20260624_164915.json
results/run3/: benchmark_20260624_165044.csv  benchmark_20260624_165044.json
results/run4/: benchmark_20260624_181834.csv  benchmark_20260624_181834.json
results/run5/: benchmark_20260624_185702.csv  benchmark_20260624_185702.json
results/run6/: benchmark_20260624_190839.csv  benchmark_20260624_190839.json
results/run7/: benchmark_20260624_192038.csv  benchmark_20260624_192038.json  benchmark_20260624_192721.csv  benchmark_20260624_192721.json  benchmark_20260625_173128.csv  benchmark_20260625_173128.json  benchmark_20260625_173342.csv  benchmark_20260625_173342.json  benchmark_20260625_173405.csv  benchmark_20260625_173405.json  (+2 more)
sparse_kv/: __init__.py  attention.py  eviction.py
tests/: test_kernel_correctness.py  test_reference.py
train/: fsdp_profile.py  train_fsdp_lora.py
(+2 files in other folders)
